--- a/stylesheets/egy.css
+++ b/stylesheets/egy.css
@@ -37,7 +37,7 @@ header {
   background: #3E474F;
   box-shadow: 0 .5em 1em #111;
   position: absolute;
-  top: 0;
+ bottom: 0;
   left: 0;
   z-index: 900;
   width: 100%;
