--- a/stylesheets/egy.css
+++ b/stylesheets/egy.css
@@ -5,8 +5,8 @@ h1 {
   font-family: "Audiowide", cursive;
   font-size: 2em;
   font-size: 6vw;
-  line-height: 1.2;
-  margin: 0.5em 0 3em;
+  line-height: 40%;
+  margin-top:-40px;
   text-shadow: 1px 1px 1px #333;
 }
 
@@ -182,8 +182,10 @@ h3 {
 .wrapper2 {
   width: 100%;
   position: relative;
-  margin: 0px auto;left:-500px
+  margin: 0px auto;left:-500px;opacity:0
 }
+
+.wrapper2:hover {opacity:1}
 .wrapper2 .screenshot {
   width: auto;
   height: 450px;
